20081207:
- fixed some typos in man page
- TCP buffer tuning could be a little bit more intelligent
- fixed formating of some info messages
- tuneable TCP buffer with option --tcpbuffer

20081113:
- tune send and receive buffer of TCP stack to match block size
- added target check to Makefile
- fix: don't mix up file during open
- code cleanup/unification for MD5
- sendfile should also be used for writing to files
- sync cleanup on output thread instead of input thread
- fix: access to dest_t after free()
- unified summary and join between verbose and silent mode
- minor code cleanups

20081023:
- mbuffer should not abort on SIGTERM
- mbuffer should not segv on invalid arguments for options -m, -s
- transfer statistics should wait for the first block to be received
- minor code path optimization
- option -n should accept -n1

20081015:
- FIX REGRESSION: stdout may be corrupted by mbuffer
  (This regression was the result of a patch to redirect
   stdout of autoloader commands)

20081014:
- redirect autoloader stdout to mbuffer's stderr
- added support for O_DIRECT (use option --direct)
- options -o and -i should recognize "-" as stdin/stdout
- direct use Solaris' native semaphore implementation
- fixed cancellation issues
- manpath needs to be created
- sendfile should fallback to write if unsupported
- fixed maximum addressable memory message
- docu update

20080910:
- new feature: support for multiple ouptuts
- new LICENSE: GPLv3
- fixed a race-condition in logging
- adjusted CFLAGS for gcc
- warn about LD_LIBRARY_PATH interfering with build process
- the exitcode of autoloader command should be checked
- changed default buffer size to use 2% of available memory
- changed default block size to system pagesize
- added make target for lint

20080507:
- memory locking for file fails if -L is passed before -T
- use MAP_SHARED instead of MAP_PRIVATE to simplify fork in system
- missing arguments may cause a SegV
- $(LIBS) should be after $(OBJECTS)

20080502: